force-app/main/default/objects/Consultant__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval From HR</fullName>
            </value>
            <value>
                <fullName>Approved By HR</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Approval From Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>