force-app/main/default/objects/Consultant__c/fields/Experience_in_India__c.field-meta.xml
<CustomField>
    <fullName>Experience_in_India__c</fullName>
    <label>Experience in India</label>
    <length>100</length>
    <type>Text</type>
</CustomField>