force-app/main/default/objects/Consultant__c/fields/International_Student__c.field-meta.xml
<CustomField>
    <fullName>International_Student__c</fullName>
    <label>International Student</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>