force-app/main/default/objects/Consultant__c/fields/Other_Status__c.field-meta.xml
<CustomField>
    <fullName>Other_Status__c</fullName>
    <label>Other Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>