force-app/main/default/objects/Consultant__c/fields/Other_Technology__c.field-meta.xml
<CustomField>
    <fullName>Other_Technology__c</fullName>
    <label>Other Technology</label>
    <length>255</length>
    <type>Text</type>
</CustomField>