force-app/main/default/objects/Consultant__c/fields/Present_Location__c.field-meta.xml
<CustomField>
    <fullName>Present_Location__c</fullName>
    <label>Present Location</label>
    <type>TextArea</type>
</CustomField>