force-app/main/default/objects/Consultant__c/fields/Technology_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Technology_Expertise__c</fullName>
    <label>Technology Expertise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>.Net</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Business Analytics/Data Analytics</fullName>
            </value>
            <value>
                <fullName>Data Engineer</fullName>
            </value>
            <value>
                <fullName>DevOps</fullName>
            </value>
            <value>
                <fullName>Quality Analyst</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>