force-app/main/default/objects/Consultant__c/fields/Visa_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Visa_Issue_Date__c</fullName>
    <label>Visa Issue Date</label>
    <type>Date</type>
</CustomField>