force-app/main/default/objects/Consultant__c/fields/Visa_Status__c.field-meta.xml
<CustomField>
    <fullName>Visa_Status__c</fullName>
    <label>Visa Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OPT</fullName>
            </value>
            <value>
                <fullName>STEM OPT</fullName>
            </value>
            <value>
                <fullName>H1B</fullName>
            </value>
            <value>
                <fullName>GC EAD</fullName>
            </value>
            <value>
                <fullName>GC</fullName>
            </value>
            <value>
                <fullName>US Citizen</fullName>
            </value>
            <value>
                <fullName>F1 Visa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>