force-app/main/default/objects/Consultant__c/fields/Willing_to_Relocate__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_Relocate__c</fullName>
    <label>Willing to Relocate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>